# space-sim

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: settings.local.json
assets/maps/: untitled_map.json
assets/sprites/characters/: metadata.json
debug/: pressure.csv
debug/debug/: pressure.csv
docs/: atmosphere_simulation_fixes.md  bug_mass_conservation_leak.md
src/: animation.rs  atmosphere.rs  camera.rs  debug.rs  lib.rs  main.rs  player.rs  tilemap.rs
src/atmosphere/: constants.rs  csv_export.rs  debug.rs  diagnostics.rs  grid.rs  mod.rs  monitoring.rs  plugin.rs  simulation.rs  sources.rs
src/atmosphere/observability/: export.rs  heatmap.rs  metrics.rs  mod.rs  monitors.rs  pressure_logger.rs  viz.rs
src/atmosphere/steps/: README.md  advection.rs  compression.rs  diffusion.rs  pressure_flux.rs  pressure_projection.rs
tests/: atmosphere_integration.rs  fluid_dynamics_fundamentals.rs
