[package]
name = "space_station_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_ecs_tilemap = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Enable optimizations for dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3

# Enable fast compile for bevy
[profile.dev]
opt-level = 1

# Enable high optimizations for release builds
[profile.release]
lto = "thin"
codegen-units = 1
